<resources>
    <string name="app_name">Munchies</string>
    <string name="login">Login</string>

    <string name="username">Username: </string>
    <string name="userID">User ID: </string>
    <string name="password">Password: </string>
    <string name="opassword">Old Password: </string>
    <string name="npassword">New Password: </string>
    <string name="registration">Registration</string>
    <string name="studentFName">First Name:</string>
    <string name="displayName">Display Name</string>

    <string name="restaurant">Restaurant</string>
    <string name="register">Register</string>
    <string name="role">Role:</string>
    <string name="admin_page">Admin</string>
    <string name="admin_add_delete_restaurant">Add/Remove Restaurant</string>
    <string name="admin_add_restaurant">Add Restaurant</string>
    <string name="admin_delete_restaurant">Remove Restaurant</string>
    <string name="restaurantName">Restaurant Name:</string>
    <string name="goToRegister">Next</string>
    <string name="changePass">Change Password</string>
    <string name="restaurantRegistration">Restaurant Registration</string>
    <string name="restaurantAddItem">Add Menu</string>
    <string name="menuName">Item name:</string>
    <string name="menuPrice">Item price:</string>
    <string name="myCart">My Cart</string>
    <string name="myPurchaseHistory">Purchase History</string>
    <string name="menuCRUD">Restaurant Menu CRUD</string>
    <string name="btnAdd">Add</string>
    <string name="btnUpdate">Update</string>
    <string name="btnDelete">Delete</string>
    <string name="restaurantMenu">Menu</string>
    <string name="restaurantOrders">View Orders</string>

    <string name="btnAddToMyCart">Add to my Cart</string>
    <string name="addCreditCard">Add Credit Card</string>
    <string name="customerCreditCard">Credit Card Information</string>
    <string name="holderName">Holder Name:</string>
    <string name="creditCardNum">Credit Card #:</string>
    <string name="cvvCode">CVV Code:</string>
    <string name="date">Date:</string>
    <string name="customerEmail">Customer Email:</string>
    <string name="editCreditCard">Update Credit Card</string>
    <string name="updateCustomerCreditCard">Update Credit Card Information</string>
    <string name="viewCreditCard">View Credit Cards</string>
    <string name="creditCardList">Credit Card List</string>
    <string name="creditCardDetail">Credit Card Details</string>
    <string name="btnDetail">Details</string>

    <string name="customerPayment">Payment</string>
    <string name="listOfItems">List Of Items: </string>
    <string name="total">Total Cost:</string>
    <string name="payWithCreditCard">Pay With Credit Card: </string>
    <string name="customerProceed">Proceed Payment</string>


    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_passwordless">Passwordless Authentication</string>
    <string name="desc_passwordless">Use only an email to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="file_complaint">Complaint</string>

    <string name="notifyBtn">Accept Customer</string>
    <string name="deniedBtn">Deny Customer</string>
    <string name="orderPage">View Current Order </string>
    <string name="file_complaintRes">Restaurant Complaint</string>
</resources>