<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RestaurantAddItem"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restaurantAddItem"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            android:text="@string/menuName"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editAddMenuName"
            android:layout_width="250dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            android:text="@string/menuPrice"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editAddMenuPrice"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/restaurantAddMenu"
        android:text="@string/btnAdd"/>


</LinearLayout>