<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtloginMessage"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_gravity="center"/>

    <ImageView
        android:layout_width="301dp"
        android:layout_height="273dp"
        android:layout_gravity="center"
        android:src="@drawable/munchies_logo" />



    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtLoginUser"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editLoginUserID"
            android:layout_width="250dp"
            android:visibility="invisible"

            android:layout_height="wrap_content"

            />

    </LinearLayout>


    <LinearLayout android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent">

        <TextView
            android:id="@+id/txtLoginPassword"

            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="18sp"/>

        <EditText
            android:id="@+id/editLoginPassword"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:visibility="invisible"

            android:inputType="textPassword"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="126dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/login"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btnRegisterRedirect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/register"

            android:visibility="invisible" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Restaurant"

            android:visibility="invisible" />

        <Button
            android:id="@+id/CheckRows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/changePass"

            android:visibility="invisible" />

        <Button
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="logout"

            android:visibility="invisible" />

    </LinearLayout>
</LinearLayout>