<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChangePassword">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/changePass"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            android:text="@string/opassword"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editOldPass"
            android:layout_width="250dp"
            android:inputType="textPassword"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            android:text="@string/npassword"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editNewPass"
            android:layout_width="250dp"
            android:inputType="textPassword"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:text="@string/changePass"
        android:layout_marginTop="10dp"/>

</LinearLayout>