<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RestaurantRegistration"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restaurantRegistration"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"/>

    <LinearLayout android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent">

        <TextView
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            android:text="Restaurant Name"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editRestaurantName"
            android:layout_width="250dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            android:text="ID Key: "
            android:textSize="14sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editID"
            android:textSize="24dp"
            android:layout_marginLeft="15dp"
            android:textStyle="bold|italic" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            android:text="Username: "
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editRestaurantDisplayName"
            android:layout_width="250dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent">

        <TextView
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editRestaurantFirstPassword"
            android:layout_width="250dp"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <LinearLayout android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent">

        <TextView
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            android:text="Confirm Password"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/editRestaurantRegisterPassword"
            android:layout_width="250dp"
            android:layout_height="wrap_content" />

    </LinearLayout>




    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration"/>



</LinearLayout>